First draft of index.html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,94 @@
     <title>My personal website</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+      <h1>Thomas Müller</h1>
+      <nav>
+        <a href="#contact">contact</a>
+        <a href="#biography">biography</a>
+        <a href="#cv">CV</a>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <img
+          src="https://www.martermuehle.de/media/image/1b/04/64/Nerd.jpg"
+          width="350 px"
+          alt="Thomas Müller drinking coffee"
+        /><br />
+        A photo about myself while drinking a cup of coffee
+        <hr width="50%" align="left" />
+      </section>
+
+      <section>
+        id="things" Things I like:
+        <ul>
+          <li>Mountainbikes</li>
+          <li>Motorcylces</li>
+          <li>Bouldern</li>
+          <li>Coding</li>
+        </ul>
+        Things I hate:
+        <ul>
+          <li>Spiders</li>
+          <li>Early mornings</li>
+          <li>Tourist traps</li>
+        </ul>
+      </section>
+      <section id="contact">
+        <h2>You can find me everywhere</h2>
+        <ul>
+          <li>Live in Hückswagen / Germany</li>
+          <li>via phone +49 171 12345678</li>
+        </ul>
+
+        <a href="https://github.com/thomasmueller87"
+          ><img
+            src="https://github.githubassets.com/images/modules/logos_page/GitHub-Logo.png"
+            width="300"
+            alt="at GitHub"
+        /></a>
+        <div>
+          <a href="https://github.com/thomasmueller87">Meetme at GitHub</a>
+        </div>
+        <br />
+        <a href="https://www.linkedin.com/in/thomas-m%C3%BCller-6655b6220/"
+          ><img
+            src="https://upload.wikimedia.org/wikipedia/commons/0/01/LinkedIn_Logo.svg"
+            width="300"
+            alt="at GitHub"
+        /></a>
+        <div>
+          <a href="https://www.linkedin.com/in/thomas-m%C3%BCller-6655b6220/"
+            >Meetme at LinkedIn</a
+          >
+        </div>
+      </section>
+      <section id="biography">
+        <h2>My biography</h2>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam animi
+        cupiditate voluptates natus sit aliquid magnam amet, eius ducimus ullam
+        sed quod non tempora obcaecati ut cumque dolores explicabo. Nesciunt,
+        nobis error! Assumenda nemo, atque sed, exercitationem labore obcaecati
+        cumque nobis repellendus libero, a expedita praesentium ea recusandae
+        magnam non ipsa cupiditate. Ad porro optio vel sequi sint nam similique
+        minus repellat doloribus exercitationem sit impedit, molestias suscipit,
+        possimus amet?
+      </section>
+      <section id="cv">
+        <h2>My CV</h2>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam animi
+        cupiditate voluptates natus sit aliquid magnam amet, eius ducimus ullam
+        sed quod non tempora obcaecati ut cumque dolores explicabo. Nesciunt,
+        nobis error! Assumenda nemo, atque sed, exercitationem labore obcaecati
+        cumque nobis repellendus libero, a expedita praesentium ea recusandae
+        magnam non ipsa cupiditate. Ad porro optio vel sequi sint nam similique
+        minus repellat doloribus exercitationem sit impedit, molestias suscipit,
+        possimus amet? <br />
+      </section>
+    </main>
+    <footer>
+      <p>(C) 2021 by Thomas Müller | <a href="impressum.html">imprint</a></p>
+    </footer>
   </body>
 </html>
