Fehlerkorrektur section things

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <hr width="50%" align="left" />
       </section>
 
-      <section>
-        id="things" Things I like:
+      <section id="things">
+        Things I like:
         <ul>
           <li>Mountainbikes</li>
           <li>Motorcylces</li>
