--- a/index.html
+++ b/index.html
@@ -92,6 +92,31 @@
         minus repellat doloribus exercitationem sit impedit, molestias suscipit,
         possimus amet? <br />
       </section>
+      <section id="formular">
+        <p>Schreib mir eine Nachricht!</p>
+        <form action="" method="get">
+          <label for="name">Name</label>
+          <input type="text" name="name_form" id="name" />
+          <div>
+            <label for="email">E-Mail</label>
+            <input type="email" name="email-form" id="email" />
+          </div>
+          <div>
+            <label for="nachricht">Deine Nachricht</label><br />
+            <textarea
+              name="nachricht-form"
+              id="nachricht"
+              cols="30"
+              rows="10"
+            ></textarea>
+          </div>
+          <div>
+            <input type="checkbox" name="newsletter" id="newsletter-form" />
+            <label for="newsletter">Ja, ich möchte den Newsletter!</label>
+          </div>
+          <button>Absenden</button>
+        </form>
+      </section>
     </main>
     <footer>
       <p>(C) 2021 by Thomas Müller | <a href="impressum.html">imprint</a></p>
