--- a/index.html
+++ b/index.html
@@ -15,31 +15,31 @@
     <div class="main-frame">
       <header>
         <h1>Thomas Müller</h1>
-        <nav class="navbox">
-          <a href="#cv">CV</a>
-          <a href="#get-in-touch">get-in-touch</a>
-        </nav>
       </header>
       <main>
         <section class="photo">
           <img src="photo.jpg" alt="Picture showing Thomas Müller" />
         </section>
         <section class="tags">
-          <h2>#my attributes</h2>
+          <h2>#my skills</h2>
           <div class="flexbox">
-            <div class="attributes">#coder</div>
-            <div class="attributes">#front end dev</div>
-            <div class="attributes">#professionally experienced</div>
-            <div class="attributes">#sales</div>
-            <div class="attributes">#motorcylce</div>
-            <div class="attributes">#climbing</div>
-            <div class="attributes">#nature</div>
-            <div class="attributes">#digital native</div>
-            <div class="attributes">#b2b</div>
-            <div class="attributes">#hands-on</div>
-            <div class="attributes">#communication</div>
-            <div class="attributes">#customer service</div>
-            <div class="attributes">#teamplayer</div>
+            <div class="attributes">HTML5</div>
+            <div class="attributes">CSS3</div>
+            <div class="attributes">JavaScript</div>
+            <div class="attributes">ES2020</div>
+            <div class="attributes">React 17</div>
+            <div class="attributes">styled-components</div>
+            <div class="attributes">React Styleguidist</div>
+            <div class="attributes">React Router</div>
+            <div class="attributes">Node.js</div>
+            <div class="attributes">npm</div>
+            <div class="attributes">Express</div>
+            <div class="attributes">MongoDB</div>
+            <div class="attributes">mongoose</div>
+            <div class="attributes">Git/Github Workflow</div>
+            <div class="attributes">Jest</div>
+            <div class="attributes">Cypress</div>
+            <div class="attributes">Figma</div>
           </div>
         </section>
         <section id="cv" class="cv">
