--- a/index.html
+++ b/index.html
@@ -44,15 +44,37 @@
         </section>
         <section id="cv" class="cv">
           <h2>#my CV</h2>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi vel
-          itaque consequuntur, aperiam cumque blanditiis, dolorem laboriosam
-          amet officia nihil omnis, ab commodi dolor minus dolore quibusdam.
-          Doloremque, necessitatibus magnam! Lorem ipsum dolor sit amet
-          consectetur adipisicing elit. Quod modi recusandae quidem est eum
-          deserunt. Ea placeat corporis officia alias sapiente perferendis, unde
-          cum voluptates magni atque veritatis aspernatur mollitia
-          necessitatibus ducimus ad doloribus recusandae ipsum quos! Culpa,
-          dolores laboriosam!
+          <div class="cv-flexbox">
+            <div class="cv-block study">
+              <div class="cv-date">2021/11 - 2022/02</div>
+              <div class="cv-job">[Study] Responsive Web Development</div>
+              <div class="cv-place">neuefische GmbH</div>
+            </div>
+            <div class="cv-block">
+              <div class="cv-date">2021/06 - 2021/11</div>
+              <div class="cv-job">[Job] Key Account Manager</div>
+              <div class="cv-place">Coroplast Fritz Müller GmbH & Co. KG</div>
+            </div>
+            <div class="cv-block">
+              <div class="cv-date">2015/09 - 2021/05</div>
+              <div class="cv-job">[Job] Sales Area Manager</div>
+              <div class="cv-place">Barna Steel S.A.</div>
+            </div>
+            <div class="cv-block study">
+              <div class="cv-date">2012/09 - 2016/05</div>
+              <div class="cv-job">
+                [Study] Bachelor of Arts in Business Administration
+              </div>
+              <div class="cv-place">
+                FOM Hochschule für Oekonomie & Management
+              </div>
+            </div>
+            <div class="cv-block">
+              <div class="cv-date">2013/01 - 2015/08</div>
+              <div class="cv-job">[Job] Sales Assistant</div>
+              <div class="cv-place">Barna Steel S.A.</div>
+            </div>
+          </div>
         </section>
         <section id="get-in-touch" class="get-in-touch">
           <h2>#get in touch</h2>
