CV Angepasst, Grid Box hinzugefuegt

--- a/index.html
+++ b/index.html
@@ -46,32 +46,51 @@
           <h2>#my CV</h2>
           <div class="cv-flexbox">
             <div class="cv-block study">
-              <div class="cv-date">2021/11 - 2022/02</div>
-              <div class="cv-job">[Study] Responsive Web Development</div>
+              <div class="cv-grid">
+                <div class="cv-grid-1">2021/11 - 2022/02</div>
+                <div class="cv-grid-2">[#study]</div>
+              </div>
+              <div class="cv-job">Responsive Web Development</div>
               <div class="cv-place">neuefische GmbH</div>
             </div>
+
             <div class="cv-block">
-              <div class="cv-date">2021/06 - 2021/11</div>
-              <div class="cv-job">[Job] Key Account Manager</div>
+              <div class="cv-grid">
+                <div class="cv-grid-1">2021/11 - 2022/02</div>
+                <div class="cv-grid-2">[#job]</div>
+              </div>
+              <div class="cv-job">Key Account Manager</div>
               <div class="cv-place">Coroplast Fritz Müller GmbH & Co. KG</div>
             </div>
+
             <div class="cv-block">
-              <div class="cv-date">2015/09 - 2021/05</div>
-              <div class="cv-job">[Job] Sales Area Manager</div>
+              <div class="cv-grid">
+                <div class="cv-grid-1">2015/09 - 2021/05</div>
+                <div class="cv-grid-2">[#job]</div>
+              </div>
+              <div class="cv-job">Sales Area Manager</div>
               <div class="cv-place">Barna Steel S.A.</div>
             </div>
+
             <div class="cv-block study">
-              <div class="cv-date">2012/09 - 2016/05</div>
+              <div class="cv-grid">
+                <div class="cv-grid-1">2012/09 - 2016/05</div>
+                <div class="cv-grid-2">[#study]</div>
+              </div>
               <div class="cv-job">
-                [Study] Bachelor of Arts in Business Administration
+                Bachelor of Arts in Business Administration
               </div>
               <div class="cv-place">
                 FOM Hochschule für Oekonomie & Management
               </div>
             </div>
+
             <div class="cv-block">
-              <div class="cv-date">2013/01 - 2015/08</div>
-              <div class="cv-job">[Job] Sales Assistant</div>
+              <div class="cv-grid">
+                <div class="cv-grid-1">2013/01 - 2015/08</div>
+                <div class="cv-grid-2">[#job]</div>
+              </div>
+              <div class="cv-job">Sales Assistant</div>
               <div class="cv-place">Barna Steel S.A.</div>
             </div>
           </div>
@@ -111,6 +130,14 @@
       </main>
       <footer>
         <p>(c) 2021 by Thomas Müller | <a href="imprint.html">imprint</a></p>
+        <div class="wrapper">
+          <div class="one">One</div>
+          <div class="two">Two</div>
+          <div class="three">Three</div>
+          <div class="four">Four</div>
+          <div class="five">Five</div>
+          <div class="six">Six</div>
+        </div>
       </footer>
     </div>
   </body>
