small error corrections

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                 <div class="cv-grid-2">[#job]</div>
               </div>
               <div class="cv-job">Key Account Manager</div>
-              <div class="cv-place">Coroplast Fritz Müller GmbH & Co. KG</div>
+              <div class="cv-place">
+                Coroplast Fritz Müller GmbH&nbsp;&&nbsp;Co.&nbsp;KG
+              </div>
             </div>
 
             <div class="cv-block">
@@ -72,19 +74,6 @@
               <div class="cv-place">Barna Steel S.A.</div>
             </div>
 
-            <div class="cv-block study">
-              <div class="cv-grid">
-                <div class="cv-grid-1">2012/09 - 2016/05</div>
-                <div class="cv-grid-2">[#study]</div>
-              </div>
-              <div class="cv-job">
-                Bachelor of Arts in Business Administration
-              </div>
-              <div class="cv-place">
-                FOM Hochschule für Oekonomie & Management
-              </div>
-            </div>
-
             <div class="cv-block">
               <div class="cv-grid">
                 <div class="cv-grid-1">2013/01 - 2015/08</div>
@@ -92,6 +81,19 @@
               </div>
               <div class="cv-job">Sales Assistant</div>
               <div class="cv-place">Barna Steel S.A.</div>
+            </div>
+
+            <div class="cv-block study">
+              <div class="cv-grid">
+                <div class="cv-grid-1">2012/09 - 2016/05</div>
+                <div class="cv-grid-2">[#study]</div>
+              </div>
+              <div class="cv-job">
+                Bachelor of Arts in Business&nbsp;Administration
+              </div>
+              <div class="cv-place">
+                FOM Hochschule für Oekonomie&nbsp;&&nbsp;Management
+              </div>
             </div>
           </div>
         </section>
@@ -130,14 +132,6 @@
       </main>
       <footer>
         <p>(c) 2021 by Thomas Müller | <a href="imprint.html">imprint</a></p>
-        <div class="wrapper">
-          <div class="one">One</div>
-          <div class="two">Two</div>
-          <div class="three">Three</div>
-          <div class="four">Four</div>
-          <div class="five">Five</div>
-          <div class="six">Six</div>
-        </div>
       </footer>
     </div>
   </body>
