small corrections, git/linked in images

--- a/index.html
+++ b/index.html
@@ -99,9 +99,8 @@
         </section>
         <section id="get-in-touch" class="get-in-touch">
           <h2>#get in touch</h2>
-          <p>GitHub</p>
-          <p>LinkedIn</p>
-          <p>Xing</p>
+          <p><img src="GitHub_Logo_White.png" alt="meet me at GitHub" /></p>
+          <p><img src="LI-Logo.png" alt="meet me at LinkedIn" /></p>
         </section>
         <section class="contact-formula">
           <h2>#text me</h2>
